src/test/data/c/fail/undeclared.c.err
data/c/fail/undeclared.c:3:14-15: error: undefined identifier 'x'
 3 |   return a + x;
   |              ^
